@@ -106,6 +106,58 @@ function script_usage_err {
 	usage >&2
 }
 
+# ------------------------ LOGGING & TERMINAL OUTPUT ------------------------- #
+
+# Usage: setup_logging
+# Set $log_target, which will be appended to commands that need logging.
+function setup_logging {
+
+	# $PS4 prefixes commands logged by bash.  The first character is
+	# repeated to indicate to indicate multiple levels of indirection.
+	PS4="* Command: "
+
+	# Ensure we have output.
+	if [[ "$terminal_output" == no && -z "$logfile" ]]; then
+
+		# We have no output!  This better not fail...
+		warning "both terminal output & logging disabled!"
+		logfile="/dev/null"
+	fi
+
+	# Do we have a log file?
+	if [[ -n "$logfile" ]]; then
+
+		# We may need preserve terminal output.
+		if [[ "$terminal_output" == yes ]]; then
+			log_target="> >(tee --append \"$logfile\") 2>&1"
+		else
+			log_target=">> \"$logfile\" 2>&1"
+		fi
+	fi
+}
+
+# Usage: log <command>
+# Log <command> & its output.  Return <command>'s exit value.
+function log {
+	[[ -z "$*" ]] && usage_error "log" "<command>"
+
+	local -i retval
+
+	# Start logging.
+	[[ -n "$logfile" ]] && eval "exec 3>&1 4>&2 $log_target"
+	set -x
+
+	# Run <command>.
+	"$@"
+	retval=$?
+
+	# Stop logging.
+	set +x
+	[[ -n "$logfile" ]] && exec 1>&3 2>&4 3>&- 4>&-
+
+	return $retval
+}
+
 # ---------------------------- VERSION REPORTING ----------------------------- #
 
 # Usage: version
@@ -379,28 +431,6 @@ function set_directory {
 	# Make $directory absolute.  ${archive_dirs[0]} overrides $builddir if
 	# set to a non-null value.
 	directory="${archive_dirs[0]:-$builddir}/$directory"
-}
-
-# Usage: setup_logging
-# Set $log_target, which will be appended to commands that need logging.
-function setup_logging {
-
-	# Do we have a log file?
-	if [[ -n "$logfile" ]]; then
-
-		# We may need preserve terminal output.
-		if [[ "$terminal_output" == yes ]]; then
-			log_target="2>&1 | tee --append \"$logfile\""
-		else
-			log_target=">> \"$logfile\" 2>&1"
-		fi
-	elif [[ "$terminal_output" == no ]]; then
-
-		# We have no output!  This better not fail...
-		warning "both terminal output & logging disabled!"
-		warning "stderr will still be output to the terminal"
-		log_target="> /dev/null"
-	fi
 }
 
 # Usage: prepare_build_env
